feat: Migrate user services to Thrift serialization; remove Confluent Schema Registry and Avro dependencies, implement Thrift message handling in user-thrift-server-service and user-watcher-service, and update Kafka configurations for Thrift integration, ensuring backward compatibility during the transition period.