@@ -1,27 +1,28 @@
 package com.example.watcher.kafka;
 
-import com.example.kafka.avro.*;
 import com.example.common.domain.User;
 import com.example.common.domain.UserQueryCriteria;
+import com.example.kafka.thrift.*;
+import com.example.kafka.util.ThriftKafkaMessageHandler;
 import com.example.user.service.port.UserServicePort;
 import com.example.watcher.constants.WatcherConstants;
 import com.example.watcher.service.ResponseService;
 import com.example.watcher.service.UserMappingService;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
+import org.apache.kafka.clients.consumer.ConsumerRecord;
 import org.springframework.kafka.annotation.KafkaListener;
 import org.springframework.kafka.support.KafkaHeaders;
 import org.springframework.stereotype.Component;
-import org.apache.kafka.clients.consumer.ConsumerRecord;
 
 import java.util.List;
 import java.util.Optional;
+import java.util.stream.Collectors;
 
 @Slf4j
-// Temporarily disabled during Thrift migration
-// @Component
+@Component
 @RequiredArgsConstructor
-public class UserServiceKafkaListener {
+public class UserServiceThriftKafkaListener {
 
   private final UserServicePort userService;
   private final ResponseService responseService;
@@ -29,18 +30,19 @@ public class UserServiceKafkaListener {
 
   @javax.annotation.PostConstruct
   public void init() {
-    log.info("=== UserServiceKafkaListener initialized ===");
+    log.info("=== UserServiceThriftKafkaListener initialized ===");
   }
 
-  @KafkaListener(topics = "ping.request", groupId = WatcherConstants.CONSUMER_GROUP_ID, containerFactory = WatcherConstants.CONTAINER_FACTORY_AVRO)
-  public void onPingRequest(ConsumerRecord<String, PingRequest> record) {
+  @KafkaListener(topics = "ping.request", groupId = WatcherConstants.CONSUMER_GROUP_ID, containerFactory = "kafkaListenerContainerFactory")
+  public void onPingRequest(ConsumerRecord<String, byte[]> record) {
     String correlationId = new String(record.headers().lastHeader(KafkaHeaders.CORRELATION_ID).value());
     String replyTopic = new String(record.headers().lastHeader(KafkaHeaders.REPLY_TOPIC).value());
+    TPingRequest request = ThriftKafkaMessageHandler.deserializeMessage(record, TPingRequest.class);
 
     log.info("Received ping request with correlationId: {}", correlationId);
     try {
       String result = userService.ping();
-      PingResponse response = new PingResponse(result);
+      TPingResponse response = new TPingResponse(result);
       responseService.sendResponse(replyTopic, correlationId, response);
       log.info("Successfully sent ping response: {} with correlationId: {}", result, correlationId);
     } catch (Exception e) {
@@ -48,18 +50,18 @@ public class UserServiceKafkaListener {
     }
   }
 
-  @KafkaListener(topics = "user.create.request", groupId = WatcherConstants.CONSUMER_GROUP_ID, containerFactory = WatcherConstants.CONTAINER_FACTORY_AVRO)
-  public void onCreateUserRequest(ConsumerRecord<String, UserCreateRequest> record) {
+  @KafkaListener(topics = "user.create.request", groupId = WatcherConstants.CONSUMER_GROUP_ID, containerFactory = "kafkaListenerContainerFactory")
+  public void onCreateUserRequest(ConsumerRecord<String, byte[]> record) {
     String correlationId = new String(record.headers().lastHeader(KafkaHeaders.CORRELATION_ID).value());
     String replyTopic = new String(record.headers().lastHeader(KafkaHeaders.REPLY_TOPIC).value());
-    UserCreateRequest request = record.value();
+    TUserCreateRequest request = ThriftKafkaMessageHandler.deserializeMessage(record, TUserCreateRequest.class);
 
     log.info("Received create user request: name={} with correlationId: {}", request.getName(), correlationId);
     try {
-      User domain = userMappingService.createUserFromRequest(request);
+      User domain = userMappingService.createUserFromThriftRequest(request);
       User created = userService.create(domain);
-      UserResponse userResponse = userMappingService.createUserResponse(created);
-      UserCreateResponse response = new UserCreateResponse(userResponse);
+      TUserResponse userResponse = userMappingService.createThriftUserResponse(created);
+      TUserCreateResponse response = new TUserCreateResponse(userResponse);
       responseService.sendResponse(replyTopic, correlationId, response);
       log.info("Successfully sent create user response for user: {} with correlationId: {}", created.getId(),
           correlationId);
@@ -68,21 +70,22 @@ public class UserServiceKafkaListener {
     }
   }
 
-  @KafkaListener(topics = "user.get.request", groupId = WatcherConstants.CONSUMER_GROUP_ID, containerFactory = WatcherConstants.CONTAINER_FACTORY_AVRO)
-  public void onGetUserRequest(ConsumerRecord<String, UserGetRequest> record) {
+  @KafkaListener(topics = "user.get.request", groupId = WatcherConstants.CONSUMER_GROUP_ID, containerFactory = "kafkaListenerContainerFactory")
+  public void onGetUserRequest(ConsumerRecord<String, byte[]> record) {
     String correlationId = new String(record.headers().lastHeader(KafkaHeaders.CORRELATION_ID).value());
     String replyTopic = new String(record.headers().lastHeader(KafkaHeaders.REPLY_TOPIC).value());
-    UserGetRequest request = record.value();
+    TUserGetRequest request = ThriftKafkaMessageHandler.deserializeMessage(record, TUserGetRequest.class);
 
     log.info("Received get user request: id={} with correlationId: {}", request.getId(), correlationId);
     try {
       Optional<User> user = userService.getById(request.getId());
-      UserGetResponse response;
+      TUserGetResponse response = new TUserGetResponse();
       if (user.isPresent()) {
-        UserResponse userResponse = userMappingService.createUserResponse(user.get());
-        response = new UserGetResponse(userResponse, true);
+        TUserResponse userResponse = userMappingService.createThriftUserResponse(user.get());
+        response.setUser(userResponse);
+        response.setFound(true);
       } else {
-        response = new UserGetResponse(null, false);
+        response.setFound(false);
       }
       responseService.sendResponse(replyTopic, correlationId, response);
       log.info("Successfully sent get user response: found={} with correlationId: {}", user.isPresent(), correlationId);
@@ -91,23 +94,24 @@ public class UserServiceKafkaListener {
     }
   }
 
-  @KafkaListener(topics = "user.update.request", groupId = WatcherConstants.CONSUMER_GROUP_ID, containerFactory = WatcherConstants.CONTAINER_FACTORY_AVRO)
-  public void onUpdateUserRequest(ConsumerRecord<String, UserUpdateRequest> record) {
+  @KafkaListener(topics = "user.update.request", groupId = WatcherConstants.CONSUMER_GROUP_ID, containerFactory = "kafkaListenerContainerFactory")
+  public void onUpdateUserRequest(ConsumerRecord<String, byte[]> record) {
     String correlationId = new String(record.headers().lastHeader(KafkaHeaders.CORRELATION_ID).value());
     String replyTopic = new String(record.headers().lastHeader(KafkaHeaders.REPLY_TOPIC).value());
-    UserUpdateRequest request = record.value();
+    TUserUpdateRequest request = ThriftKafkaMessageHandler.deserializeMessage(record, TUserUpdateRequest.class);
 
     log.info("Received update user request: id={} with correlationId: {}", request.getId(), correlationId);
     try {
       Optional<User> existing = userService.getById(request.getId());
-      UserUpdateResponse response;
+      TUserUpdateResponse response = new TUserUpdateResponse();
       if (existing.isEmpty()) {
-        response = new UserUpdateResponse(null, false);
+        response.setSuccess(false); // User not found
       } else {
-        User domain = userMappingService.createUserFromUpdateRequest(request);
+        User domain = userMappingService.createUserFromThriftUpdateRequest(request);
         User updated = userService.update(domain);
-        UserResponse userResponse = userMappingService.createUserResponse(updated);
-        response = new UserUpdateResponse(userResponse, true);
+        TUserResponse userResponse = userMappingService.createThriftUserResponse(updated);
+        response.setUser(userResponse);
+        response.setSuccess(true);
       }
       responseService.sendResponse(replyTopic, correlationId, response);
       log.info("Successfully sent update user response: updated={} with correlationId: {}", existing.isPresent(),
@@ -117,21 +121,21 @@ public class UserServiceKafkaListener {
     }
   }
 
-  @KafkaListener(topics = "user.delete.request", groupId = WatcherConstants.CONSUMER_GROUP_ID, containerFactory = WatcherConstants.CONTAINER_FACTORY_AVRO)
-  public void onDeleteUserRequest(ConsumerRecord<String, UserDeleteRequest> record) {
+  @KafkaListener(topics = "user.delete.request", groupId = WatcherConstants.CONSUMER_GROUP_ID, containerFactory = "kafkaListenerContainerFactory")
+  public void onDeleteUserRequest(ConsumerRecord<String, byte[]> record) {
     String correlationId = new String(record.headers().lastHeader(KafkaHeaders.CORRELATION_ID).value());
     String replyTopic = new String(record.headers().lastHeader(KafkaHeaders.REPLY_TOPIC).value());
-    UserDeleteRequest request = record.value();
+    TUserDeleteRequest request = ThriftKafkaMessageHandler.deserializeMessage(record, TUserDeleteRequest.class);
 
     log.info("Received delete user request: id={} with correlationId: {}", request.getId(), correlationId);
     try {
       Optional<User> existing = userService.getById(request.getId());
-      UserDeleteResponse response;
+      TUserDeleteResponse response = new TUserDeleteResponse();
       if (existing.isEmpty()) {
-        response = new UserDeleteResponse(false);
+        response.setDeleted(false);
       } else {
         userService.delete(request.getId());
-        response = new UserDeleteResponse(true);
+        response.setDeleted(true);
       }
       responseService.sendResponse(replyTopic, correlationId, response);
       log.info("Successfully sent delete user response: deleted={} with correlationId: {}", existing.isPresent(),
@@ -141,27 +145,25 @@ public class UserServiceKafkaListener {
     }
   }
 
-  @KafkaListener(topics = "user.list.request", groupId = WatcherConstants.CONSUMER_GROUP_ID, containerFactory = WatcherConstants.CONTAINER_FACTORY_AVRO)
-  public void onListUsersRequest(ConsumerRecord<String, UserListRequest> record) {
+  @KafkaListener(topics = "user.list.request", groupId = WatcherConstants.CONSUMER_GROUP_ID, containerFactory = "kafkaListenerContainerFactory")
+  public void onListUsersRequest(ConsumerRecord<String, byte[]> record) {
     String correlationId = new String(record.headers().lastHeader(KafkaHeaders.CORRELATION_ID).value());
     String replyTopic = new String(record.headers().lastHeader(KafkaHeaders.REPLY_TOPIC).value());
-    UserListRequest request = record.value();
+    TUserListRequest request = ThriftKafkaMessageHandler.deserializeMessage(record, TUserListRequest.class);
 
-    log.info("Received list users request: page={}, size={} with correlationId: {}", request.getPage(),
-        request.getSize(), correlationId);
+    log.info("Received list users request: page={}, size={} with correlationId: {}",
+        request.isSetPage() ? request.getPage() : "default",
+        request.isSetSize() ? request.getSize() : "default", correlationId);
     try {
-      UserQueryCriteria criteria = userMappingService.createCriteriaFromRequest(request);
+      UserQueryCriteria criteria = userMappingService.createCriteriaFromThriftRequest(request);
       List<User> users = userService.listByCriteria(criteria);
       long total = userService.countByCriteria(criteria);
-      List<UserResponse> userResponses = users.stream()
-          .map(userMappingService::createUserResponse)
-          .toList();
-      UserListResponse response = new UserListResponse(
-          userResponses,
-          criteria.getPage(),
-          criteria.getSize(),
-          total,
-          (int) Math.ceil((double) total / criteria.getSize()));
+      List<TUserResponse> userResponses = users.stream()
+          .map(userMappingService::createThriftUserResponse)
+          .collect(Collectors.toList());
+      int totalPages = (int) Math.ceil((double) total / criteria.getSize());
+      TUserListResponse response = new TUserListResponse(userResponses, criteria.getPage(), criteria.getSize(), total,
+          totalPages);
       responseService.sendResponse(replyTopic, correlationId, response);
       log.info("Successfully sent list users response: {} users with correlationId: {}", users.size(), correlationId);
     } catch (Exception e) {
